[gd_scene load_steps=3 format=3 uid="uid://dv57jw1jlbgw"]

[ext_resource type="Script" uid="uid://cww3ghktjswwj" path="res://scenes/shop/device_shop.gd" id="1_h1v14"]
[ext_resource type="Texture2D" uid="uid://bmcnpwcnd0e7b" path="res://assets/UI_UX/egg_shop_2.png" id="2_bfki1"]

[node name="DeviceShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1v14")

[node name="ShopBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bfki1")
stretch_mode = 2

[node name="CloseButton" type="Button" parent="."]
layout_mode = 2
offset_left = 412.0
offset_top = 31.0
offset_right = 478.0
offset_bottom = 63.0
flat = true

[node name="HeaterButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(102, 108)
layout_mode = 2
offset_left = 164.0
offset_top = 87.0
offset_right = 266.0
offset_bottom = 195.0
flat = true

[node name="CoolerButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(102, 108)
layout_mode = 2
offset_left = 284.0
offset_top = 87.0
offset_right = 386.0
offset_bottom = 195.0
flat = true

[node name="IncubatorButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(102, 108)
layout_mode = 2
offset_left = 164.0
offset_top = 216.0
offset_right = 266.0
offset_bottom = 324.0
flat = true

[node name="RotatorButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(102, 108)
layout_mode = 2
offset_left = 284.0
offset_top = 216.0
offset_right = 386.0
offset_bottom = 324.0
flat = true

[node name="ColorRect" type="ColorRect" parent="RotatorButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.84956, 3.29696e-06, 1.54018e-06, 0.415686)

[node name="LampButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(62, 224)
layout_mode = 2
offset_left = 400.0
offset_top = 87.0
offset_right = 464.0
offset_bottom = 311.0
size_flags_horizontal = 4
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="HeaterButton" to="." method="_on_heater_button_pressed"]
[connection signal="pressed" from="CoolerButton" to="." method="_on_cooler_button_pressed"]
[connection signal="pressed" from="IncubatorButton" to="." method="_on_incubator_button_pressed"]
[connection signal="pressed" from="RotatorButton" to="." method="_on_rotator_button_pressed"]
[connection signal="pressed" from="LampButton" to="." method="_on_lamp_button_pressed"]
